- Fixed bug #61173 (Unable to detect error from finfo constructor). - Tidied up NEWS